Fixed spacing for navbar icon.

--- a/starter-template.css
+++ b/starter-template.css
@@ -45,6 +45,18 @@ body {
   margin-right: 0px;
 }
 
+@media screen and (min-width: 778px){
+
+  .my-nav-icon {
+    width: 50px;
+    height: 50px;
+    margin-left: 5px;
+    margin-right: 0px;
+    margin-right: 10px;
+  }
+
+}
+
 .work-logo {
   text-align: left !important;
   margin-right: 7px;
